--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -14,7 +14,7 @@ const { locale } = Astro.props
       <div>
         <div class='flex items-center mb-4'>
           <img src='/assets/logo-filled.svg' alt='logo' class='w-6 h-6' />
-          <span class='text-white font-bold text-2xl ml-2 mr-8'>Andrew</span>
+          <span class='text-white font-bold text-2xl ml-2 mr-8'>Malifor</span>
           <a
             href='mailto:andrey779evseev@gmail.com'
             class='text-gray hover:text-white transition-colors'
@@ -48,7 +48,7 @@ const { locale } = Astro.props
       </div>
     </div>
     <div class='text-gray w-full text-center'>
-      © Copyright 2023. Made by Andrew
+      © Copyright 2023. Made by Malifor
     </div>
   </div>
 </footer>
