--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -49,7 +49,7 @@ const links: LinkType[] = [
     <div class='flex items-center justify-between mt-8'>
       <a href='/home' class='flex gap-2 items-center'>
         <img src='/assets/logo-filled.svg' alt='logo' class='h-4 w-4' />
-        <span class='font-bold'>Andrew</span>
+        <div class="font-bold">Malifor</div>
       </a>
       <div class='flex text-gray'>
         {
