--- a/src/components/home/introduction.astro
+++ b/src/components/home/introduction.astro
@@ -14,7 +14,7 @@ const currentLanguage = new URL(Astro.request.url).pathname
 <section class='flex w-full justify-between'>
   <div class='mt-[74px]'>
     <div class='text-white font-semibold text-3xl'>
-      Andrew {locale.home.introduction.heading.part_1}
+      Malifor {locale.home.introduction.heading.part_1}
       <span class='text-primary'
         >{locale.home.introduction.heading.part_2}
         <br />
