--- a/src/components/home/contacts.astro
+++ b/src/components/home/contacts.astro
@@ -9,27 +9,27 @@ type Props = {
 const { locale } = Astro.props
 ---
 
-<section class='mb-28'>
+<section class='mb-28 sm:p-0 p-6'>
   <Label>
     {locale.home.contacts.heading}
   </Label>
-  <div class='flex justify-between items-start'>
-    <div class='text-gray w-[505px]'>
+  <div class='flex justify-between lg:items-start lg:flex-row flex-col items-center'>
+    <div class='text-gray sm:w-[505px] w-full lg:mb-0 mb-8 lg:text-left text-center'>
       {locale.home.contacts.description}
     </div>
-    <div class='border border-gray p-4'>
+    <div class='border border-gray sm:p-4 p-2'>
       <div class='text-white font-semibold mb-4'>
         {locale.home.contacts.message}
       </div>
       <div class='flex items-center mb-4'>
         <img src='/assets/email.svg' alt='email' />
-        <a href='mailto:anddrey779esveev@gmail.com' class='text-gray ml-4'
-          >andrey779evseev@gmail.com</a
-        >
+        <a href='mailto:anddrey779esveev@gmail.com' class='text-gray sm:ml-4 ml-1 sm:text-base text-sm'>
+          andrey779evseev@gmail.com
+        </a>
       </div>
       <div class='flex items-center'>
         <img src='/assets/telegram.svg' alt='email' />
-        <div class='text-gray ml-4'>@malifor</div>
+        <div class='text-gray sm:ml-4 ml-1 sm:text-base text-sm'>@malifor</div>
       </div>
     </div>
   </div>
