--- a/src/components/bookmarks.astro
+++ b/src/components/bookmarks.astro
@@ -1,4 +1,4 @@
-<div class='fixed left-4 top-0 flex flex-col items-center w-fit'>
+<div class='fixed left-4 top-0 flex flex-col items-center w-fit z-30'>
   <div class='w-[1.5px] bg-gray h-48'></div>
   <a href='https://github.com/andrey779evseev' target='_blank' class='my-3'>
     <img src='/assets/github.svg' alt='github-icon' />
