--- a/src/components/home/introduction.astro
+++ b/src/components/home/introduction.astro
@@ -11,44 +11,40 @@ const currentLanguage = new URL(Astro.request.url).pathname
   .split('/')[0]
 ---
 
-<section class='flex w-full justify-between'>
-  <div class='mt-[74px]'>
-    <div class='text-white font-semibold text-3xl'>
+<section class='flex w-full justify-between xl:flex-row flex-col items-center'>
+  <div class='mt-[74px] xl:m-0 xl:mr-16 mb-8 flex flex-col items-center'>
+    <div class='text-white font-semibold text-3xl xl:text-left text-center'>
       Malifor {locale.home.introduction.heading.part_1}
-      <span class='text-primary'
-        >{locale.home.introduction.heading.part_2}
-        <br />
-        {locale.home.introduction.heading.part_3}</span
-      >
+      <span class='text-primary'>
+        {locale.home.introduction.heading.part_2}
+      </span>
     </div>
-    <div class='text-gray mt-8 mb-6'>
-      {locale.home.introduction.description.part_1}
-      <br />
-      {locale.home.introduction.description.part_2}
+    <div class='text-gray mt-8 mb-6 xl:text-left text-center sm:w-auto w-[80%]'>
+      {locale.home.introduction.description}
     </div>
     <Button href={`/${currentLanguage}/contacts`}>
       {locale.home.introduction.button}
     </Button>
   </div>
   <div class='flex flex-col items-center'>
-    <div class='relative w-[470px] h-[386px]'>
+    <div class='relative sm:w-[470px] sm:h-[386px] w-[80%] h-[70%]'>
       <img
         src='/assets/logo-outlined.svg'
         alt='logo-outlined'
-        class='absolute top-1/3 left-0 z-[1]'
+        class='absolute sm:w-auto w-2/4 top-1/3 left-0 z-[1]'
       />
       <img
         src='/assets/people.png'
         alt='people'
-        class='absolute top-0 left-4 z-[2]'
+        class='relative ml-4 z-[2]'
       />
       <img
         src='/assets/dots.svg'
         alt='dots'
-        class='absolute top-2/3 right-4 z-[3]'
+        class='absolute sm:top-2/3 top-1/2 right-4 z-[3]'
       />
     </div>
-    <div class='flex border border-gray p-2 items-center w-[404px]'>
+    <div class='flex border border-gray p-2 items-center sm:w-[404px] w-[85%]'>
       <div class='inline-block bg-primary w-4 h-4 mr-3'></div>
       <span class='text-gray font-medium leading-[21px]'>
         {locale.home.introduction.label.part_1}
