--- a/src/components/home/quote.astro
+++ b/src/components/home/quote.astro
@@ -8,8 +8,8 @@ const { locale } = Astro.props
 ---
 
 <section class='mt-28 mb-[74px] flex justify-center'>
-  <div class='flex flex-col items-end'>
-    <div class='p-8 border border-gray relative'>
+  <div class='flex flex-col items-end sm:w-auto w-[80%]'>
+    <div class='sm:p-8 p-4 border border-gray relative'>
       {locale.home.quote.text}
       <div class='absolute py-1 px-2 bg-background -top-4 left-3'>
         <img src='/assets/quote.svg' alt='quote' />
