--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,4 @@
 ---
-import Bookmarks from '@components/bookmarks.astro'
 import Footer from '@components/footer.astro'
 import Header from '@components/header.astro'
 import '@fontsource/fira-code/400.css'
@@ -20,16 +19,15 @@ const { title, locale } = Astro.props
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='icon' type='image/x-icon' href='/favicon.ico' />
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
   <body data-title={title}>
-    <Bookmarks />
     <Header locale={locale} />
     <main>
-      <div class='pt-16 mx-auto w-full max-w-5xl'>
+      <div class='sm:pt-16 mx-auto w-full xl:max-w-5xl lg:max-w-4xl md:max-w-3xl ss:max-w-2xl sm:max-w-xl sm:p-0 p-8'>
         <slot />
       </div>
     </main>
