--- a/src/pages/[lang]/projects.astro
+++ b/src/pages/[lang]/projects.astro
@@ -17,7 +17,7 @@ const locale = createLocale(lang)
 ---
 
 <Layout title='projects' locale={locale}>
-  <div class='mt-12'>
+  <div class='mt-12 sm:p-0 px-8'>
     <div class='mb-16'>
       <div class='text-[32px] font-semibold flex mb-4'>
         <div class='text-primary'>/</div>
@@ -25,7 +25,7 @@ const locale = createLocale(lang)
       </div>
       <div>{locale.projects.description}</div>
     </div>
-    <div class='grid grid-cols-3 gap-4 mb-28'>
+    <div class='sm:grid sm:grid-cols-3 flex flex-col gap-4 mb-28'>
       {
         projects.decent.map((project) => (
           <ProjectCard locale={locale} project={project} />
