--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -19,7 +19,7 @@ const [currentLanguage, currentPage] = new URL(Astro.request.url).pathname
 
 <header class='mx-auto w-full'>
   <div
-    class='fixed ss:h-16 sm:h-28 w-full left-0 top-0 z-20 bg-background shadow-[0_0_10px_10px_#282C33]'
+    class='fixed ss:h-16 sm:h-28 h-20 w-full left-0 top-0 z-20 bg-background shadow-[0_0_10px_10px_#282C33]'
   >
     <Bookmarks />
     <div class='flex items-center justify-between mt-8 xl:max-w-5xl lg:max-w-4xl md:max-w-3xl ss:max-w-2xl sm:max-w-xl ss:flex-row sm:flex-col sm:mx-auto sm:p-0 px-16 relative'>
